--- a/index.html
+++ b/index.html
@@ -95,9 +95,7 @@
   <h1>希望重逢</h1>
   <p>我爱你们</p>
 
-  <div class="gallery">
-    <img src="images/photo1.jpg" alt="回忆照片">
-  </div>
+<img src="photo1.jpg" alt="回忆照片">
 
   <!-- 音乐按钮 -->
   <div id="music-btn"></div>
