--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
   <!-- 背景音乐 -->
   <audio id="bgm" loop>
-    <source src="osg_CHS_043.mp3" type="audio/mp3">
+    <source src="365.mp3" type="audio/mp3">
     您的浏览器不支持音频播放
   </audio>
 
