--- a/index.html
+++ b/index.html
@@ -14,191 +14,158 @@
       overflow-x: hidden;
     }
 
-    h1 {
-      margin-top: 60px;
-      font-size: 2.2em;
-      color: #a35c7a;
-      letter-spacing: 2px;
+    /* 封面 */
+    #cover {
+      position: fixed;
+      top:0; left:0;
+      width:100vw;
+      height:100vh;
+      background-color:#faf9f7;
+      display:flex;
+      flex-direction:column;
+      justify-content:center;
+      align-items:center;
+      text-align:center;
+      z-index:100;
+      transition: opacity 1s ease;
     }
 
-    p {
-      font-size: 1.2em;
-      color: #555;
-      margin-bottom: 40px;
+    #cover-img {
+      width:80%;
+      max-width:500px;
+      border-radius:12px;
+      box-shadow:0 4px 10px rgba(0,0,0,0.2);
+    }
+
+    #cover-text {
+      margin-top:20px;
+      font-size:1.3em;
+      color:#555;
+    }
+
+    #start-btn {
+      margin-top:30px;
+      font-size:1.2em;
+      padding:10px 20px;
+      border:none;
+      border-radius:8px;
+      cursor:pointer;
+      background-color:#a35c7a;
+      color:white;
+      transition: background-color 0.3s ease;
+    }
+
+    #start-btn:hover {
+      background-color:#c16b91;
+    }
+
+    /* 相册 */
+    #album {
+      display: none;
+      padding-top: 60px;
     }
 
     .gallery {
       display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 20px;
-      padding-bottom: 60px;
-    }
-
-  .gallery {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
-  padding: 40px 0;
-}
-
-/* 新的图片容器，保持比例并居中 */
-#slideshow {
-  width: 90vw;              /* 宽度占视口90% */
-  max-width: 800px;         /* 最大宽度（防止太大） */
-  height: 60vh;             /* 高度占视口60% */
-  object-fit: contain;      /* ✅ 保证整张图片完整显示 */
-  border-radius: 12px;
-  background-color: #fdfdfd; /* 背景柔和填充 */
-  box-shadow: 0 4px 10px rgba(0,0,0,0.15);
-  transition: opacity 0.5s ease;
-}
-
-    .gallery img:hover {
-      transform: scale(1.03);
-    }
-
-    /* 音乐按钮样式 */
-    #music-btn {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-      background-color: #fff;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-      cursor: pointer;
-      display: flex;
-      justify-content: center;
       align-items: center;
-      transition: transform 0.3s ease;
-      z-index: 100;
+      justify-content: center;
+      gap: 20px;
+      padding: 40px 0;
     }
 
-    #music-btn.playing {
-      animation: spin 3s linear infinite;
+    #slideshow {
+      width: 90vw;
+      max-width: 800px;
+      height: 60vh;
+      object-fit: contain;  /* 保证整张图片完整显示 */
+      border-radius: 12px;
+      background-color: #fdfdfd;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+      transition: opacity 0.5s ease;
     }
 
-    @keyframes spin {
-      from { transform: rotate(0deg); }
-      to { transform: rotate(360deg); }
+    .nav-btn {
+      background-color: #fff;
+      border: none;
+      font-size: 2em;
+      color: #a35c7a;
+      cursor: pointer;
+      padding: 10px 20px;
+      border-radius: 8px;
+      box-shadow: 0 3px 6px rgba(0,0,0,0.2);
+      transition: background-color 0.3s ease, transform 0.2s ease;
     }
 
-    #music-btn::before {
-      content: "🎵";
-      font-size: 24px;
-    }
-
-    /* 淡入动画 */
-    .fade-in {
-      animation: fadeIn 2.5s ease-in-out;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
+    .nav-btn:hover {
+      background-color: #f8e8ed;
+      transform: scale(1.1);
     }
   </style>
 </head>
-<body class="fade-in">
-  <h1>希望重逢</h1>
-  <p>我爱你们</p>
+<body>
 
-<div class="gallery">
-  <button class="nav-btn" id="prev-btn">←</button>
-  <img id="slideshow" src="photo1.jpg" alt="回忆照片">
-  <button class="nav-btn" id="next-btn">→</button>
-</div>
+  <!-- 封面 -->
+  <div id="cover">
+    <img src="cover.jpg" alt="封面照片" id="cover-img">
+    <p id="cover-text">欢迎回忆美好时光，一起看看我们的故事。</p>
+    <button id="start-btn">回忆</button>
+  </div>
 
-<style>
-  .gallery {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-    padding: 40px 0;
-  }
-
-  .gallery img {
-    width: 80%;
-    max-width: 500px;
-    border-radius: 12px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.15);
-    transition: opacity 0.5s ease;
-  }
-
-  .nav-btn {
-    background-color: #fff;
-    border: none;
-    font-size: 2em;
-    color: #a35c7a;
-    cursor: pointer;
-    padding: 10px 20px;
-    border-radius: 8px;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.2);
-    transition: background-color 0.3s ease, transform 0.2s ease;
-  }
-
-  .nav-btn:hover {
-    background-color: #f8e8ed;
-    transform: scale(1.1);
-  }
-</style>
-
-
-
-
-<script>
-  const images = ["photo1.jpg", "photo2.jpg", "photo3.jpg"]; // 👈 这里列出所有图片文件名
-  let current = 0;
-
-  const imgEl = document.getElementById('slideshow');
-  const prevBtn = document.getElementById('prev-btn');
-  const nextBtn = document.getElementById('next-btn');
-
-  function showImage(index) {
-    imgEl.style.opacity = 0;
-    setTimeout(() => {
-      imgEl.src = images[index];
-      imgEl.style.opacity = 1;
-    }, 300);
-  }
-
-  prevBtn.addEventListener('click', () => {
-    current = (current - 1 + images.length) % images.length;
-    showImage(current);
-  });
-
-  nextBtn.addEventListener('click', () => {
-    current = (current + 1) % images.length;
-    showImage(current);
-  });
-</script>
-
-  <!-- 音乐按钮 -->
-  <div id="music-btn"></div>
+  <!-- 相册 -->
+  <div id="album">
+    <div class="gallery">
+      <button class="nav-btn" id="prev-btn">←</button>
+      <img id="slideshow" src="photo1.jpg" alt="回忆照片">
+      <button class="nav-btn" id="next-btn">→</button>
+    </div>
+  </div>
 
   <!-- 背景音乐 -->
-  <audio id="bgm" loop>
-    <source src="365.mp3" type="audio/mp3">
-    您的浏览器不支持音频播放
+  <audio id="bgm" loop preload="auto">
+    <source src="osg_CHS_043.mp3" type="audio/mp3">
   </audio>
 
   <script>
-    const btn = document.getElementById('music-btn');
+    const startBtn = document.getElementById('start-btn');
+    const cover = document.getElementById('cover');
+    const album = document.getElementById('album');
     const bgm = document.getElementById('bgm');
 
-    btn.addEventListener('click', () => {
-      if (bgm.paused) {
-        bgm.play();
-        btn.classList.add('playing');
-      } else {
-        bgm.pause();
-        btn.classList.remove('playing');
-      }
+    // 轮播图片数组
+    const images = ["photo1.jpg", "photo2.jpg", "photo3.jpg"]; // 根据你的图片数量修改
+    let current = 0;
+    const imgEl = document.getElementById('slideshow');
+    const prevBtn = document.getElementById('prev-btn');
+    const nextBtn = document.getElementById('next-btn');
+
+    function showImage(index){
+      imgEl.style.opacity = 0;
+      setTimeout(()=>{
+        imgEl.src = images[index];
+        imgEl.style.opacity = 1;
+      },300);
+    }
+
+    prevBtn.addEventListener('click', ()=>{
+      current = (current-1+images.length)%images.length;
+      showImage(current);
+    });
+    nextBtn.addEventListener('click', ()=>{
+      current = (current+1)%images.length;
+      showImage(current);
+    });
+
+    // 点击“回忆”按钮
+    startBtn.addEventListener('click', ()=>{
+      bgm.play();
+      cover.style.opacity = 0;
+      setTimeout(()=>{
+        cover.style.display = "none";
+        album.style.display = "block";
+        showImage(current);
+      }, 1000); // 封面淡出1秒后显示相册
     });
   </script>
+
 </body>
 </html>
