--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
   <!-- 背景音乐 -->
   <audio id="bgm" loop preload="auto">
-    <source src="osg_CHS_043.mp3" type="audio/mp3">
+    <source src="365.mp3" type="audio/mp3">
   </audio>
 
   <script>
