--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>希望重逢</title>
+
+  <!DOCTYPE html>
+<script>
+  const password = "Toowong";
+  const userInput = prompt("请输入访问密码：");
+  if (userInput !== password) {
+    alert("密码错误，无法访问网站。");
+    document.body.innerHTML = "<h2>访问被拒绝</h2>";
+  }
+</script>
+<html lang="zh">
+<head>
+  <meta c
   <style>
     body {
       margin: 0;
